main/default/objects/Loyalty_Program__c/Loyalty_Program__c.object-meta.xml
<CustomObject>
    <label>Loyalty Program</label>
    <nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>Loyalty Program ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>