main/default/objects/Loyalty_Program__c/fields/Loyalty_Points_Earned__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points_Earned__c</fullName>
    <label>Loyalty Points Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>