main/default/objects/Loyalty_Program__c/fields/Points_Balance__c.field-meta.xml
<CustomField>
    <fullName>Points_Balance__c</fullName>
    <formula>if(text(Program_Status__c)=&apos;Expired&apos;,0,Loyalty_Points_Earned__c - Points_Used__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>