main/default/objects/Loyalty_Program__c/fields/Points_Used__c.field-meta.xml
<CustomField>
    <fullName>Points_Used__c</fullName>
    <label>Points Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>