main/default/objects/Loyalty_Program__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loyalty Points</fullName>
                <default>true</default>
                <label>Loyalty Points</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>