main/default/objects/Loyalty_Program__c/fields/Redemption_Method__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Method__c</fullName>
    <label>Redemption Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Points</fullName>
                <default>true</default>
                <label>Points</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>