main/default/objects/Loyalty_Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Loyalty_Points_Earned__c</columns>
    <columns>Points_Used__c</columns>
    <columns>Program_Status__c</columns>
    <columns>Expiry_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>